--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -3,7 +3,7 @@
 <head>
   {% block head %}
     {% load staticfiles %}
-    <link rel="stylesheet" href="{{ STATIC_URL ~ 'css/style.css' }}" />
+    <link rel="stylesheet" href="{{ STATIC_URL ~ 'transcriptome/css/style.css' }}" />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     {# <script type="text/javascript" src="{{ STATIC_URL ~ 'js/main.js' }}"></script> #}
 
