--- a/transcriptome/templates/transcriptome/details.jinja2
+++ b/transcriptome/templates/transcriptome/details.jinja2
@@ -1,4 +1,4 @@
-{% extends "base.jinja2" %}
+{% extends "transcriptome/base.jinja2" %}
 
 {% block title %}
   {% if transcript.seqname is defined %}
