--- a/transcriptome/templates/transcriptome/details.jinja2
+++ b/transcriptome/templates/transcriptome/details.jinja2
@@ -61,7 +61,7 @@
         <tbody>
           <tr>
             <th>Dmel. Accession</th>
-            <td colspan="3"><a href="http//www.ncbi.nlm.nih.gov/protein/{{ hit_name }}" target="_blank">{{ hit_name }}</a></td>
+            <td colspan="3"><a href="http://www.ncbi.nlm.nih.gov/protein/{{ hit_name }}" target="_blank">{{ hit_name }}</a></td>
           </tr>
           <tr>
             <th>Dmel. Description</th>
