--- a/transcriptome/templates/transcriptome/search.jinja2
+++ b/transcriptome/templates/transcriptome/search.jinja2
@@ -47,6 +47,7 @@
           <input type="submit", name="export_fasta", value="Download FASTA" />
           <input type="submit", name="export_blast", value="Download BLAST" />
           <input type="submit", name="export_rpkm", value="Download Gene Expression" />
+          (<a href="/bdorseq/help#download_options" target="_blank">help</a>)
           <table>
             <thead>
               <tr>
