Fix the header of blast output; open lines: rs_mal, rs_nal, rs_tri and rs_spi; add feature: ftp site for large file download

--- a/transcriptome/templates/transcriptome/help.jinja2
+++ b/transcriptome/templates/transcriptome/help.jinja2
@@ -24,6 +24,11 @@ query_hsp_start: offset of query at the start of the alignment (one-offset)<br>
 query_hsp_end: offset of query at the end of the alignment (one-offset)<br>
 query_strand: the strand direction of the query sequence if applicable<br>
 query_frame: frame of the query if applicable<br>
+hit_length: the length of the reference sequence<br>
+hit_hsp_start: offset of reference at the start of the alignment (one-offset)<br>
+hit_hsp_end: offset of reference at the end of the alignment (one-offset)<br>
+hit_strand: the strand direction of the reference sequence if applicable<br>
+hit_frame: frame of the reference if applicable<br>
 hsp_score: score (in bits) of the HSP<br>
 hsp_bits: number of bits for that score<br>
 hsp_evalue: expect value of the HSP<br>
