--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -25,6 +25,7 @@
       <a href="/bdorseq/">Home<a> |
       <a href="/bdorseq/archive/">Archive</a> |
       <a href="/bdorseq/search/">Download</a> |
+      <a href="{{ FTP_URL }}" target="_blank"> Releases (FTP)</a> |
       <a href="/bdorseq/logout/">Logout</a>
     </p>
   {% endblock menu %}
@@ -37,7 +38,7 @@
 
 <div id="footer">
   {% block footer %}
-    Oriental Fruit Fly Transcriptome Database v2.2</br>
+    Oriental Fruit Fly Transcriptome Database v2.3</br>
     Supported by c4Lab
   {% endblock footer %}
 </div>
