Rename download section; add releases section to index page

--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -24,7 +24,7 @@
     <p>
       <a href="/bdorseq/">Home<a> |
       <a href="/bdorseq/archive/">Archive</a> |
-      <a href="/bdorseq/search/">Download</a> |
+      <a href="/bdorseq/search/">Browse</a> |
       <a href="{{ FTP_URL }}" target="_blank"> Releases (FTP)</a> |
       <a href="/bdorseq/logout/">Logout</a>
     </p>
