--- a/transcriptome/templates/transcriptome/search.jinja2
+++ b/transcriptome/templates/transcriptome/search.jinja2
@@ -1,12 +1,12 @@
 {% extends "transcriptome/base.jinja2" %}
 
 {% block title %}
-  Download
+  Browse
 {% endblock title %}
 
 {% block content %}
     {% block search %}
-      {% include "transcriptome/transcript_search_form.jinja2"  %}
+      {% include "transcriptome/transcript_search_form.jinja2" %}
     {% endblock search %}
 
     <div>
