--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -25,7 +25,9 @@
       <a href="/bdorseq/">Home<a> |
       <a href="/bdorseq/archive/">Archive</a> |
       <a href="/bdorseq/search/">Browse</a> |
-      <a href="{{ FTP_URL }}" target="_blank"> Releases (FTP)</a> |
+      <a href="/bdorseq/seqvar/search/">SeqVar</a> |
+      <a href="{{ FTP_URL }}" target="_blank">Releases (FTP)</a> |
+      <a href="/bdorseq/help" target="_blank">Help</a> |
       <a href="/bdorseq/logout/">Logout</a>
     </p>
   {% endblock menu %}
@@ -38,7 +40,7 @@
 
 <div id="footer">
   {% block footer %}
-    Oriental Fruit Fly Transcriptome Database v2.3</br>
+    Oriental Fruit Fly Transcriptome Database v3.0</br>
     Supported by c4Lab
   {% endblock footer %}
 </div>
