--- a/transcriptome/static/transcriptome/css/general.css
+++ b/transcriptome/static/transcriptome/css/general.css
@@ -1,6 +1,7 @@
 table, tr, th, td {
     border: 1px solid black;
     border-collapse: collapse;
+    vertical-align: top;
 }
 
 th {
@@ -25,4 +26,10 @@ th {
 
 a {
     text-decoration: none;
+}
+
+/* testing seqvar  */
+.m {
+    background-color: red;
+    color: white;
 }
