--- a/transcriptome/templates/transcriptome/sequence_variation_search_form.jinja2
+++ b/transcriptome/templates/transcriptome/sequence_variation_search_form.jinja2
@@ -18,7 +18,7 @@
     </div>
 
     <div class="field_wrapper">
-      <input type="submit", value="Search" />
+      <input type="submit", name="search", value="Search" />
     </div>
     </form>
 {% endif %}
