--- a/transcriptome/templates/transcriptome/svdetails.jinja2
+++ b/transcriptome/templates/transcriptome/svdetails.jinja2
@@ -93,8 +93,10 @@
       <table width="1500">
         {% if alignment_results.for is defined %}
           <tr>
-            <a name="for">
-            <a href="#top">Back to Top</a>
+            <th colspan="2" align="left">
+              <a name="for">
+              <a href="#top">Back to Top</a>
+            </th>
           </tr>
           <tr>
             <th>(Formothion) Protein Multiple Sequence Alignment</th>
@@ -107,8 +109,10 @@
         {% endif %}
         {% if alignment_results.fen is defined %}
           <tr>
-            <a name="fen">
-            <a href="#top">Back to Top</a>
+            <th colspan="2" align="left">
+              <a name="fen">
+              <a href="#top">Back to Top</a>
+            </th>
           </tr>
           <tr>
             <th>(Fenthion) Protein Multiple Sequence Alignment</th>
@@ -121,8 +125,10 @@
         {% endif %}
         {% if alignment_results.met is defined %}
           <tr>
+            <th colspan="2" align="left">
             <a name="met">
             <a href="#top">Back to Top</a>
+            </th>
           </tr>
           <tr>
             <th>(Methomyl) Protein Multiple Sequence Alignment</th>
